2001-08-25  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: connect to the "close" signal since "destroy" was
	causing corruption when save the e-tree state file. Try to
	raise the dialog if it already exists. For the close button
	just call gnome_dialog_close, don't call it in the "close" 
	signal handler. Clear the memmaps data at close time

2001-08-24  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: add a Kill Process item to right click
	menu because there are times when it is needed.

	* procactions.c (kill_process): add an extra argument to
	determine the signal sent.

	* callbacks.c: add popup_menu_end_process to send SIGTERM and
	change popup_menu_kill_process to send SIGKILL and ignore the
	warning dialog.

	* procdialogs.c: call kill_process with SIGTERM.

2001-08-24  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: Put disks updating on timeout. Move mount 
	directory to the last column of the clist since it is the 
	least interesting.

	* procman.[c,h]: new config value for the graph updating
	interval. Remove the g_free to the e-tree state save file
	names since I think that may be why procman leaves behind
	weird files.

	* load-graph.c: use the new timeout config variable for the
	graph timeout.

	* callbacks.c (cb_update_disks): clear the clist and
	repopulate.

2001-08-24  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: fix bug #59466, a typo in wording. Also slightly
	modify another string. Sorry translators :(

2001-08-23  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: connect to the "delete_event" signal as that
	is more right than "destroy" and gets rid of the bug where
	widgets are destroyed before the "destroy" signal is emitted.

	* callbacks.c: now cb_app_delete for the "delete_event" signal
	and cb_exit for the exit menu item.

2001-08-23  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: fill in the status bar message for the menuitems

2001-08-23  Kevin Vandersloot <kfv101@psu.edu>
